--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
+        "nunomaduro/collision": "^8.5",
+        "orchestra/testbench": "^9.12",
         "phpunit/phpunit": "^10.5",
-        "spatie/laravel-ignition": "^2.4"
+        "spatie/laravel-ignition": "^2.4",
+        "testcontainers/testcontainers": "^1.0",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
