--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -18,14 +21,14 @@
         "orchestra/testbench": "^9.12",
         "phpunit/phpunit": "^10.5",
         "spatie/laravel-ignition": "^2.4",
-        "testcontainers/testcontainers": "^1.0",
         "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Src\\": "src/"
         }
     },
     "autoload-dev": {
