--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     libonig-dev \
     libxml2-dev \
-    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd sockets
 
 # Installer Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
