--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Src\\": "src/"
+            "Src\\": "src/",
+            "Database\\Seeders\\": "src/Bootstrap/Infrastructure/database/seeders"
         }
     },
     "autoload-dev": {
