--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.5",
         "orchestra/testbench": "^9.12",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^10.5",
         "spatie/laravel-ignition": "^2.4"
     },
@@ -36,6 +37,8 @@
         }
     },
     "scripts": {
+        "lint": "vendor/bin/pint src",
+        "analyse": "vendor/bin/phpstan analyse",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
