--- a/.env.testing
+++ b/.env.testing
@@ -1,10 +1,10 @@
 APP_ENV=testing
 DB_CONNECTION=mysql
-DB_HOST=mysql_test
-DB_PORT=3307
-DB_DATABASE=laravel_test_db
-DB_USERNAME=laravel_test_user
-DB_PASSWORD=secret
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=tp_ecom
+DB_USERNAME=root
+DB_PASSWORD=
 CACHE_DRIVER=array
 SESSION_DRIVER=array
 QUEUE_CONNECTION=sync
